@@ -177,6 +177,8 @@ Core and builtins
 Extension Modules
 -----------------
 
+- Bug #1346533, select.poll() doesn't raise an error if timeout > sys.maxint
+
 - Bug #1344508, Fix UNIX mmap leaking file descriptors
 
 - Patch #1338314, Bug #1336623: fix tarfile so it can extract
